// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PeriodicNotes > pre-conditions > should throw when date format is empty 1`] = `
[AggregateError: invalid config
	AssertionError: format="" and options={} must make round-trip conversions]
`;

exports[`PeriodicNotes > pre-conditions > should throw when everything is invalid 1`] = `
[AggregateError: invalid config
	AssertionError: folder must be non-empty
	AssertionError: format="" and options={} must make round-trip conversions
	AssertionError: interval duration must be valid: invalid time: infinity
	AssertionError: interval offset must be valid: invalid time: unspecified]
`;

exports[`PeriodicNotes > pre-conditions > should throw when folder is empty 1`] = `
[AggregateError: invalid config
	AssertionError: folder must be non-empty]
`;

exports[`PeriodicNotes > pre-conditions > should throw when interval duration is 0 1`] = `
[AggregateError: invalid config
	AssertionError: interval duration must be non-zero]
`;

exports[`PeriodicNotes > pre-conditions > should throw when interval duration is invalid 1`] = `[Error: Invalid unit value one]`;

exports[`PeriodicNotes > pre-conditions > should throw when interval offset is invalid 1`] = `[Error: Invalid unit value one]`;
